2010-03-19  Adam Barth  <abarth@webkit.org>

        Unreviewed.

        Add a bunch of IRC nicknames for reviewers.

        * Scripts/webkitpy/committers.py:

2010-03-19  Zoltan Horvath  <zoltan@webkit.org>

        Reviewed by Oliver Hunt.

        Added USE_SYSTEM_MALLOC flag to build-webkit
        https://bugs.webkit.org/show_bug.cgi?id=21272

        Add system-alloc flag to build-webkit. It makes easy to switch
        between system allocator and TCmalloc.

        * Scripts/build-webkit:

2010-03-19  Adam Barth  <abarth@webkit.org>

        Unreviewed "build" fix.

        Of course, I caused a regression in the file that isn't tested.  :(

        * Scripts/webkitpy/statusserver.py:

2010-03-19  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Simplify BuildBot core builder code for easier re-use
        https://bugs.webkit.org/show_bug.cgi?id=36350

        I simply couldn't see anything through all this Yak-hair.

        * Scripts/webkitpy/buildbot.py:
        * Scripts/webkitpy/commands/queries.py:

2010-03-19  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        committers.py should know IRC nicknames
        https://bugs.webkit.org/show_bug.cgi?id=36349

        I'll add the actual nicknames in another patch.

        * Scripts/webkitpy/committers.py:
        * Scripts/webkitpy/committers_unittest.py:

2010-03-18  Anders Bakken  <Anders Bakken <agbakken@gmail.com>>

        Reviewed by Simon Hausmann.

        https://bugs.webkit.org/show_bug.cgi?id=36318

        QtLauncher runs as a GuiClient by default in Qt Embedded which will
        make it try to connect to an existing GuiServer. This patch makes it
        run like a stand-alone app.

        * QtLauncher/main.cpp:
        (LauncherApplication::LauncherApplication):

2010-03-19  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Move find_green_to_red_transition out of "what-broke" onto Builder for easier re-use