@@ -204,38 +204,38 @@ reviewers_list = [
     Reviewer("George Staikos", ["staikos@kde.org", "staikos@webkit.org"]),
     Reviewer("Gustavo Noronha Silva", ["gns@gnome.org", "kov@webkit.org"], "kov"),
     Reviewer("Holger Freyther", ["zecke@selfish.org", "zecke@webkit.org"], "zecke"),
-    Reviewer("Jan Alonzo", ["jmalonzo@gmail.com", "jmalonzo@webkit.org"]),
-    Reviewer("Jeremy Orlow", "jorlow@chromium.org"),
-    Reviewer("John Sullivan", "sullivan@apple.com"),
-    Reviewer("Jon Honeycutt", "jhoneycutt@apple.com"),
-    Reviewer("Justin Garcia", "justin.garcia@apple.com"),
+    Reviewer("Jan Alonzo", ["jmalonzo@gmail.com", "jmalonzo@webkit.org"], "janm"),
+    Reviewer("Jeremy Orlow", "jorlow@chromium.org", "jorlow"),
+    Reviewer("John Sullivan", "sullivan@apple.com", "sullivan"),
+    Reviewer("Jon Honeycutt", "jhoneycutt@apple.com", "jhoneycutt"),
+    Reviewer("Justin Garcia", "justin.garcia@apple.com", "justing"),
     Reviewer("Ken Kocienda", "kocienda@apple.com"),
-    Reviewer("Kenneth Rohde Christiansen", ["kenneth@webkit.org", "kenneth.christiansen@openbossa.org"]),
-    Reviewer("Kevin Decker", "kdecker@apple.com"),
-    Reviewer("Kevin McCullough", "kmccullough@apple.com"),
-    Reviewer("Kevin Ollivier", ["kevino@theolliviers.com", "kevino@webkit.org"]),
-    Reviewer("Lars Knoll", ["lars@trolltech.com", "lars@kde.org"]),
-    Reviewer("Laszlo Gombos", "laszlo.1.gombos@nokia.com"),
-    Reviewer("Maciej Stachowiak", "mjs@apple.com"),
-    Reviewer("Mark Rowe", "mrowe@apple.com"),
-    Reviewer("Nate Chapin", "japhet@chromium.org"),
-    Reviewer("Nikolas Zimmermann", ["zimmermann@kde.org", "zimmermann@physik.rwth-aachen.de", "zimmermann@webkit.org"]),
-    Reviewer("Oliver Hunt", "oliver@apple.com"),
-    Reviewer("Pavel Feldman", "pfeldman@chromium.org"),
-    Reviewer("Richard Williamson", "rjw@apple.com"),
-    Reviewer("Rob Buis", ["rwlbuis@gmail.com", "rwlbuis@webkit.org"]),
-    Reviewer("Sam Weinig", ["sam@webkit.org", "weinig@apple.com"]),
-    Reviewer("Shinichiro Hamaji", "hamaji@chromium.org"),
-    Reviewer("Simon Fraser", "simon.fraser@apple.com"),
-    Reviewer("Simon Hausmann", ["hausmann@webkit.org", "hausmann@kde.org", "simon.hausmann@nokia.com"]),
-    Reviewer("Stephanie Lewis", "slewis@apple.com"),
-    Reviewer("Steve Falkenburg", "sfalken@apple.com"),
+    Reviewer("Kenneth Rohde Christiansen", ["kenneth@webkit.org", "kenneth.christiansen@openbossa.org"], "kenneth"),
+    Reviewer("Kevin Decker", "kdecker@apple.com", "superkevin"),
+    Reviewer("Kevin McCullough", "kmccullough@apple.com", "maculloch"),
+    Reviewer("Kevin Ollivier", ["kevino@theolliviers.com", "kevino@webkit.org"], "kollivier"),
+    Reviewer("Lars Knoll", ["lars@trolltech.com", "lars@kde.org"], "lars"),
+    Reviewer("Laszlo Gombos", "laszlo.1.gombos@nokia.com", "lgombos"),
+    Reviewer("Maciej Stachowiak", "mjs@apple.com", "othermaciej"),
+    Reviewer("Mark Rowe", "mrowe@apple.com", "bdash"),
+    Reviewer("Nate Chapin", "japhet@chromium.org", "natechapin"),
+    Reviewer("Nikolas Zimmermann", ["zimmermann@kde.org", "zimmermann@physik.rwth-aachen.de", "zimmermann@webkit.org"], "wildfox"),
+    Reviewer("Oliver Hunt", "oliver@apple.com", "olliej"),
+    Reviewer("Pavel Feldman", "pfeldman@chromium.org", "pfeldman"),
+    Reviewer("Richard Williamson", "rjw@apple.com", "rjw"),
+    Reviewer("Rob Buis", ["rwlbuis@gmail.com", "rwlbuis@webkit.org"], "rwlbuis"),
+    Reviewer("Sam Weinig", ["sam@webkit.org", "weinig@apple.com"], "weinig"),
+    Reviewer("Shinichiro Hamaji", "hamaji@chromium.org", "hamaji"),
+    Reviewer("Simon Fraser", "simon.fraser@apple.com", "smfr"),
+    Reviewer("Simon Hausmann", ["hausmann@webkit.org", "hausmann@kde.org", "simon.hausmann@nokia.com"], "tronical"),
+    Reviewer("Stephanie Lewis", "slewis@apple.com", "sundiamonde"),
+    Reviewer("Steve Falkenburg", "sfalken@apple.com", "sfalken"),
     Reviewer("Tim Omernick", "timo@apple.com"),
-    Reviewer("Timothy Hatcher", ["timothy@hatcher.name", "timothy@apple.com"]),
-    Reviewer(u'Tor Arne Vestb\xf8', "vestbo@webkit.org"),
+    Reviewer("Timothy Hatcher", ["timothy@hatcher.name", "timothy@apple.com"], "xenon"),
+    Reviewer(u'Tor Arne Vestb\xf8', "vestbo@webkit.org", "torarne"),
     Reviewer("Vicki Murley", "vicki@apple.com"),
-    Reviewer("Xan Lopez", ["xan.lopez@gmail.com", "xan@gnome.org", "xan@webkit.org"]),
-    Reviewer("Zack Rusin", "zack@kde.org"),
+    Reviewer("Xan Lopez", ["xan.lopez@gmail.com", "xan@gnome.org", "xan@webkit.org"], "xan"),
+    Reviewer("Zack Rusin", "zack@kde.org", "zackr"),
 ]
 
 
